--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	</head>
 	<body>
 		<nav class="nav">
-			<a href="" class="nav__link">Gmail</a>
-			<a href="" class="nav__link">Images</a>
+			<a href="#" class="nav__link">Gmail</a>
+			<a href="#" class="nav__link">Images</a>
 			<button class="nav__btn nav__btn--menuBtn">
 				<div class="nav__dots">
 					<i class="fa-solid fa-ellipsis"></i
@@ -27,6 +27,7 @@
 				<p class="first-letter">P</p>
 			</button>
 		</nav>
+		<div class="wrapper">
 		<header class="header">
 			<img
 				src="https://www.google.pl/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
@@ -35,36 +36,36 @@
 			/>
 		</header>
 		<main class="main">
-			
-			<input type="text" class="main__input" />
+			<input type="search" class="main__input" />
 			<i class="main__magnifyingGlass fa-solid fa-magnifying-glass"></i>
 			<button class="main__btnKeyboard">
 				<i class="main__btnKeyboard__icon fa-solid fa-keyboard"></i>
 			</button>
 			<div class="btns main__btns">
-				<button class="main__btn">Google Search</button>
-				<button class="main__btn">I'm Feeling Luckly</button>
+				<button class="main__btns__btn">Google Search</button>
+				<button class="main__btns__btn">I'm Feeling Luckly</button>
 			</div>
 			<p class="main__text">Google offered in: <a href="#polish">polski</a></p>
 		</main>
+	</div>
 		<footer class="footer">
 			<div class="footer__countryName">
 				<p class="footer__country">Poland</p>
-				<a
-					href="https://www.flaticon.com/free-icons/others"
-					title="others icons"
-					>Others icons created by Deeksha Pahariya - Flaticon</a
-				>
 			</div>
 			<div class="footer__info">
-				<a href="" class="footer__link">About</a>
-				<a href="" class="footer__link">Advertising</a>
-				<a href="" class="footer__link">Business</a>
-				<a href="" class="footer__link">How Search works</a>
-				<a href="" class="footer__link">Privacy</a>
-				<a href="" class="footer__link">Terms</a>
-				<a href="" class="footer__link">Settings</a>
+				<div class="footer__info__firstDiv">
+					<a href="#" class="footer__link">About</a>
+					<a href="#" class="footer__link">Advertising</a>
+					<a href="#" class="footer__link">Business</a>
+					<a href="#" class="footer__link">How Search works</a>
+				</div>
+				<div class="footer__info__secondDiv">
+					<a href="#" class="footer__link">Privacy</a>
+					<a href="#" class="footer__link">Terms</a>
+					<a href="#" class="footer__link">Settings</a>
+				</div>
 			</div>
+			
 		</footer>
 		<script src="./dist/js/main.min.js"></script>
 	</body>
